--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "scripts": {
     "start": "react-scripts start ",
-    "build": "react-scripts --max_old_space_size=4096 build",
+    "build": "NODE_ENV=development react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
