--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "yup-phone": "^1.2.19"
   },
   "scripts": {
-    "start": "node server.js ",
+    // "start": "node server.js ",
+    "start": "react-scripts start",
     "build": "NODE_ENV=development react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
